# SimpleApp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/SACore/: CMakeLists.txt  application.cpp  application.h  global.h  object.cpp  object.h  structs.h  utility.h
src/SAGui/: CMakeLists.txt  button.cpp  button.h  checkbox.cpp  checkbox.h  clipboard.cpp  clipboard.h  label.cpp  label.h  lineedit.cpp  lineedit.h  scrollbar.cpp  scrollbar.h  textedit.cpp  textedit.h  widget.cpp  widget.h  widgetlinux.cpp  widgetlinux.h  widgetwindows.cpp  widgetwindows.h
src/SANetwork/: CMakeLists.txt  tcpserver.cpp  tcpserver.h  tcpserverwindows.cpp  tcpsocket.cpp  tcpsocket.h  tcpsocketlinux.cpp  tcpsocketwindows.cpp  udpsocket.cpp  udpsocket.h  udpsocketlinux.cpp  udpsocketwindows.cpp
test/: CMakeLists.txt  cat200x200.raw  controls.cpp  controls.h  imagetest.cpp  imagetest.h  main.cpp  snakegame.cpp  snakegame.h  tcpservertest.cpp  tcpservertest.h  tcpsockettest.cpp  tcpsockettest.h  texttest.cpp  texttest.h  udpsockettest.cpp  udpsockettest.h
